2003-01-31  Darin Adler  <darin@apple.com>

        Reviewed by Dave.

        - fixed 3160442 -- no top image map at ebay, caused by referrer returning null instead of empty string

        * khtml/ecma/kjs_html.cpp: (KJS::HTMLDocument::tryGet):
        Return an empty string, not null, when there is no referrer.
        
2003-01-31  Chris Blumenberg  <cblu@apple.com>

        * kwq/WebCoreBridge.mm: fixed key value

2003-01-31  Chris Blumenberg  <cblu@apple.com>

	Fixed : 3155148 - image shown when dragging gets size from image file, not size as used on page


        Reviewed by darin.

        * kwq/WebCoreBridge.h: added WebCoreElementImageRectKey
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge elementAtPoint:]): get the rect of the image

2003-01-30  Trey Matteson  <trey@apple.com>

	3161088 - disabled select elements are not disabled when scrolling list used	

	We use a tableview delegate method to prevent the user from changing the
	selection when disabled.  Too bad tableviews don't know how to disable themselves.
	We also condition the cell used for drawing to match our enabled state.

        Reviewed by Maciej.

        * kwq/KWQListBox.h:  Keep track of whether we are enabled.
        * kwq/KWQListBox.mm:
        (QListBox::QListBox):  Init new flag.
        (QListBox::setEnabled):  Set new flag.
        (QListBox::isEnabled):  Getter for new flag.
        (-[KWQListBoxTableViewDelegate selectionShouldChangeInTableView:]):
	Disallow selection changes if disabled.
        (-[KWQListBoxTableViewDelegate tableView:willDisplayCell:forTableColumn:row:]):
	Enable cell based on our enabled state to get visual feedback of being disabled.

2003-01-30  Trey Matteson  <trey@apple.com>

	3161486 - REGRESSION: double click on a widget causes crash

	Slight enhancement to the earlier fix of this bug.  When handling a doubleclick we
	don't want to try to pass the current event down the Cocoa widgets, because Cocoa