@@ -1,5 +1,14 @@
 2003-01-31  Darin Adler  <darin@apple.com>
 
+        Reviewed by me, Dave wrote the code.
+
+        - fixed 3162013 -- Safari collapses margins through bottom borders (affects top of zeldman.com)
+
+        * khtml/rendering/render_flow.cpp: (RenderFlow::layoutBlockChildren):
+        Don't collapse if we have any bottom border or padding.
+
+2003-01-31  Darin Adler  <darin@apple.com>
+
         Reviewed by Dave.
 
         - fixed 3160442 -- no top image map at ebay, caused by referrer returning null instead of empty string
